Description
Run RgnGuide.exe (https://www.codeproject.com/Articles/1944/Guide-to-WIN32-Regions) in ReactOS and drag a rectangle by clicking in the large window and holding the mouse button down to get to a new point and release the button to create the first rectangle. If you use the Left Mouse button you generate red first regions and if you use the Right Mouse button you generate blue second regions. If you do not have an assert yet, then use the first toolbar button to erase the window and try again. I have included the program here because this appears to be allowed under the Code Project Open License (https://www.codeproject.com/info/cpol10.aspx). The attached patch fixes the problem for me.
Attachments
Issue Links
- is duplicated by
-
CORE-15712 Word 2003: Corruption and BSoD when browsing a file
-
- Resolved
-
- relates to
-
CORE-12204 Assertion 'FALSE' failed in REGION_bXformRgn while using FineReader 8
-
- Resolved
-