[WIN32K:NTGDI] Fix ASSERTS in REGION_bXformRgn. CORE-15992